<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rela"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/LoadG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:adjustViewBounds="false"
            android:contentDescription="@string/todo"
            android:cropToPadding="false" />

        <com.madcamp.test01012012.MyCanvas
            android:id="@+id/myCanvas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />

    </FrameLayout>


    <Button
        android:id="@+id/LoadG"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/load_image"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/takeSc"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/take_screenshot"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toEndOf="@+id/LoadG" />

    <TextView
        android:id="@+id/main_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@android:color/transparent"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/ToBlack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/background_dark"
        android:text="@string/toblack"
        app:layout_constraintBottom_toTopOf="@+id/LoadG"
        app:layout_constraintEnd_toStartOf="@+id/ToRed"
        app:layout_constraintStart_toStartOf="@+id/frameLayout" />

    <Button
        android:id="@+id/ToRed"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/tored"
        app:layout_constraintBottom_toTopOf="@+id/LoadG"
        app:layout_constraintEnd_toStartOf="@+id/ToWhite"
        app:layout_constraintStart_toEndOf="@+id/ToBlack" />

    <Button
        android:id="@+id/ToWhite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"
        android:text="@string/towhite"
        app:layout_constraintBottom_toTopOf="@+id/LoadG"
        app:layout_constraintEnd_toStartOf="@+id/ToYellow"
        app:layout_constraintStart_toEndOf="@+id/ToRed" />

    <Button
        android:id="@+id/ToYellow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/toyellow"
        app:layout_constraintBottom_toTopOf="@+id/LoadG"
        app:layout_constraintEnd_toStartOf="@+id/ToGreen"
        app:layout_constraintStart_toEndOf="@+id/ToWhite" />

    <Button
        android:id="@+id/ToGreen"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/togreen"
        app:layout_constraintBottom_toTopOf="@+id/LoadG"
        app:layout_constraintEnd_toStartOf="@+id/ToBlue"
        app:layout_constraintStart_toEndOf="@+id/ToYellow" />

    <Button
        android:id="@+id/ToBlue"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/toblue"
        app:layout_constraintBottom_toTopOf="@+id/LoadG"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toEndOf="@+id/ToGreen" />

</android.support.constraint.ConstraintLayout>